src/objects/APO_Data__c.object
<CustomObject>
    <description>Child object to parent Agency Protest Cases object. Every &quot;Decision Ground&quot; will have a record of this object type related to the Agency Protest Case record.</description>
    <fields>
        <fullName>Government_Fiscal_Year__c</fullName>
        <description>Fiscal year of the Actual Decision Date.</description>
        <inlineHelpText>Fiscal year of the Actual Decision Date.</inlineHelpText>
        <label>Government Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protestor_ID__c</fullName>
        <description>Master-Detail Relationship with Agency Protest Cases.</description>
        <inlineHelpText>Master-Detail Relationship with Agency Protest Cases.</inlineHelpText>
        <label>Protestor ID</label>
        <referenceTo>Agency_Protest_Case__c</referenceTo>
        <relationshipLabel>APO Data</relationshipLabel>
        <relationshipName>APO_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Contain all the full Decision Grounds names.</description>
        <inlineHelpText>Contain all the full Decision Grounds names.</inlineHelpText>
        <label>Decision Ground(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation</fullName>
                    <color>#EFAE73</color>
                </value>
                <value>
                    <fullName>Debriefing</fullName>
                    <color>#641CCF</color>
                </value>
                <value>
                    <fullName>Flawed Communications</fullName>
                    <color>#0B24BE</color>
                </value>
                <value>
                    <fullName>Flawed Evaluation</fullName>
                    <color>#000066</color>
                </value>
                <value>
                    <fullName>Other-Explained in Comments</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Small Business Issue</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Solicitation</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Unduly Restrictive Solicitation</fullName>
                    <color>#33CC00</color>
                </value>
                <value>
                    <fullName>Unequal Treatment</fullName>
                    <color>#33FFFF</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>APO Data</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>APO Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APO Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>